bin/tests/snapshots/shellcheck__504cc1b73f01eb4530994442499cd188_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.py = { package = pkgs.python3; exec = ''
  print($1)
''; }; }
---
