bin/tests/snapshots/shellcheck__504cc1b73f01eb4530994442499cd188_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.py = { package = pkgs.python3; exec = ''
  print($1)
''; }; }
---
<temp_file_path>>2:9:E:29:[ruff] invalid-syntax: Got unexpected token $
