bin/tests/snapshots/shellcheck__504cc1b73f01eb4530994442499cd188_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.py = { package = pkgs.python3; exec = ''
  print($1)
''; }; }
---
[ruff] Error: ruff found issues in an inline Python script
   ╭─[ <temp_file_path>:2:9 ]
   │
 2 │   print($1)
   │         ┬  
   │         ╰── invalid-syntax: Got unexpected token $
───╯
