bin/tests/snapshots/shellcheck__59041e466743f4d820ec1e01b6ccb579_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.py.exec = ''
  #!/usr/bin/env python3
  print($1)
''; }
---
