bin/tests/snapshots/shellcheck__59041e466743f4d820ec1e01b6ccb579_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.py.exec = ''
  #!/usr/bin/env python3
  print($1)
''; }
---
<temp_file_path>>1:21:W:24:[devenv_exec_shebang] devenv runs `scripts.<name>.exec` with bash, this shebang is ignored; set `package` to choose the interpreter
