bin/tests/snapshots/shellcheck__62955ea05aae02f4bb840c27fb5e8882_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ tasks."app:run".exec = "${pkgs.hello}/bin/hello $ARGS"; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ tasks."app:run".exec = "${pkgs.hello}/bin/hello $ARGS"; }
+{ tasks."app:run".exec = "${pkgs.hello}/bin/hello \"$ARGS\""; }
