bin/tests/snapshots/shellcheck__62955ea05aae02f4bb840c27fb5e8882_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ tasks."app:run".exec = "${pkgs.hello}/bin/hello $ARGS"; }
---
<temp_file_path>>1:51:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
