bin/tests/snapshots/shellcheck__62955ea05aae02f4bb840c27fb5e8882_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
{ tasks."app:run".exec = "${pkgs.hello}/bin/hello $ARGS"; }
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:1:51 ]
   │
 1 │ { tasks."app:run".exec = "${pkgs.hello}/bin/hello $ARGS"; }
   │                                                   ──┬──  
   │                                                     ╰──── SC2086: Double quote to prevent globbing and word splitting.
───╯
